<resources>
    <string name="app_name">Race Monitoring</string>

    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>

    <string name="time_label">time</string>
    <string name="time_value">0s</string>

    <string name="distance_label">distance</string>
    <string name="distance_value">0m</string>

    <string name="speed_label">speed</string>
    <string name="speed_max_label">max</string>
    <string name="speed_max_value">0</string>
    <string name="speed_min_label">min</string>
    <string name="speed_min_value">0</string>
    <string name="speed_avg_label">avg</string>
    <string name="speed_avg_value">0</string>
    <string name="speed_unit">m/s</string>

    <string name="elevation_label">altitude</string>
    <string name="elevation_max_label">max</string>
    <string name="elevation_max_value">0</string>
    <string name="elevation_min_label">min</string>
    <string name="elevation_min_value">0</string>
    <string name="elevation_gain_label">gain</string>
    <string name="elevation_gain_value">0</string>
    <string name="elevation_loss_label">loss</string>
    <string name="elevation_loss_value">0</string>
    <string name="elevation_unit">m</string>
    
    <string name="notification_title">Race Monitoring Service</string>
    <string name="notification_text">Records GPS coordinates of your race.</string>
    <string name="notification_text_err">Cannot records GPS points: device location disabled.</string>
    <string name="notification_ticker">Race Monitoring Service</string>
    <string name="channel_name">Default Channel</string>
    <string name="channel_description">Default Channel</string>

    <string name="action_help">Help</string>

    <string name="location_dialog_title">Enable location</string>
    <string name="location_dialog_message">You must enable device location for race recording.</string>
    <string name="location_dialog_enable">OPEN SETTINGS</string>
    <string name="location_dialog_quit">QUIT</string>

    <string name="app_help_title">Tips</string>
    <string name="app_help_message">Press the button for start or stop recording.
        Ensure that you have enabled the device location.\n\n
        When you stop recording, a GPX file is created into the external storage of your device and
        an overview of your race is displayed.
    </string>
    <string name="app_help_ok">OK</string>
</resources>
