<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance_value"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/distance_label" />

    <TextView
        android:id="@+id/distance_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance_unit_m"
        app:layout_constraintStart_toEndOf="@+id/distance_value"
        app:layout_constraintTop_toBottomOf="@+id/distance_label" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/time_label"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/time_value"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/time_label" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="distance_value,distance_unit,time_value" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/speed_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier1" />

    <TextView
        android:id="@+id/speed_max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_max_label"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/speed_unit" />

    <TextView
        android:id="@+id/speed_max_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_max_value"
        app:layout_constraintStart_toEndOf="@+id/speed_max_label"
        app:layout_constraintTop_toBottomOf="@+id/speed_unit" />

    <TextView
        android:id="@+id/speed_min_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_min_label"
        app:layout_constraintStart_toEndOf="@+id/speed_max_value"
        app:layout_constraintTop_toBottomOf="@+id/speed_unit" />

    <TextView
        android:id="@+id/speed_min_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_min_value"
        app:layout_constraintStart_toEndOf="@+id/speed_min_label"
        app:layout_constraintTop_toBottomOf="@+id/speed_unit" />

    <TextView
        android:id="@+id/speed_avg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_avg_label"
        app:layout_constraintStart_toEndOf="@+id/speed_min_value"
        app:layout_constraintTop_toBottomOf="@+id/speed_unit" />

    <TextView
        android:id="@+id/speed_avg_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_avg_value"
        app:layout_constraintStart_toEndOf="@+id/speed_avg_label"
        app:layout_constraintTop_toBottomOf="@+id/speed_unit" />

    <TextView
        android:id="@+id/speed_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/speed_unit"
        app:layout_constraintStart_toEndOf="@+id/speed_label"
        app:layout_constraintTop_toTopOf="@+id/barrier1" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="speed_max_label,speed_max_value,speed_min_label,speed_min_value,speed_avg_label,speed_avg_value"/>

    <TextView
        android:id="@+id/elevation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/elevation_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier2" />

    <TextView
        android:id="@+id/elevation_max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_max_label"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_max_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_max_value"
        app:layout_constraintStart_toEndOf="@+id/elevation_max_label"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_min_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_min_label"
        app:layout_constraintStart_toEndOf="@+id/elevation_max_value"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_min_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_min_value"
        app:layout_constraintStart_toEndOf="@+id/elevation_min_label"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_gain_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_gain_label"
        app:layout_constraintStart_toEndOf="@+id/elevation_min_value"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_gain_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_gain_value"
        app:layout_constraintStart_toEndOf="@+id/elevation_gain_label"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_loss_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_loss_label"
        app:layout_constraintStart_toEndOf="@+id/elevation_gain_value"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_loss_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/elevation_loss_value"
        app:layout_constraintStart_toEndOf="@+id/elevation_loss_label"
        app:layout_constraintTop_toBottomOf="@+id/elevation_unit" />

    <TextView
        android:id="@+id/elevation_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/elevation_unit"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/barrier2" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="elevation_max_label,elevation_max_value,elevation_min_label,elevation_min_value,elevation_gain_label,elevation_gain_value,elevation_loss_label,elevation_loss_value" />

    <com.example.qlem.racemonitoring.graph.RaceGraphView
        android:id="@+id/race_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier3" />

</android.support.constraint.ConstraintLayout>